<resources>
    <string name="app_name">Rick And Morty-Task</string>
    <string name="species">SPECIES</string>
    <string name="type">TYPE</string>
    <string name="human">Human</string>
    <string name="gender">GENDER</string>
    <string name="status">STATUS</string>
    <string name="favourites">favourites</string>
    <string name="favourite">Favourite</string>

    <string name="None">None</string>
    <string name="Remove">Delete from Favourites</string>
    <string name="Add">Add to Favorites</string>
    <string name="characters">Characters</string>
    <string name="todo">TODO</string>
    <string name="delete_from_fav">Delete from Favourites</string>
</resources>