<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cardview1"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:text=""
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="10dp"
        android:background="#B5A1B8"
        app:drawableStartCompat="@drawable/back_arrow" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/character_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:drawable="@drawable/character_image_bg" />

        <TextView
            android:id="@+id/status_status"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/character_name"
            android:layout_marginTop="20dp"
            android:background="@drawable/search_edittext_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/status"
            android:textColor="#0015A1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/character_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/character_name"/>

        <TextView
            android:id="@+id/character_name"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center|start"
            android:padding="8dp"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/character_image"
            app:layout_constraintStart_toEndOf="@id/status_status"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/gender_status"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/search_edittext_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/gender"
            android:textColor="#0015A1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/status_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gender"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/character_image"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:gravity="center|start"
            android:padding="8dp"
            android:text=""
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/character_name"
            app:layout_constraintStart_toEndOf="@id/gender_status"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/type_status"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/none"
            android:layout_marginTop="20dp"
            android:background="@drawable/search_edittext_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/type"
            android:textColor="#0015A1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/gender_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/none"/>

        <TextView
            android:id="@+id/none"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/status_status"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:gravity="center|start"
            android:padding="8dp"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/gender"
            app:layout_constraintStart_toEndOf="@id/type_status"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/Species_status"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/humam"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/search_edittext_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/species"
            android:textColor="#0015A1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/type_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/humam"/>

        <TextView
            android:id="@+id/humam"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender_status"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:gravity="center|start"
            android:padding="8dp"
            android:text="@string/human"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/none"
            app:layout_constraintStart_toEndOf="@id/Species_status"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/fevorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Species_status"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/search_edittext_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/favourites"
            android:textColor="#C10C4A"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Species_status"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>